PROJECT(GW_EXAMPLES)

SET(TARGET_DEFAULT_LABEL_PREFIX "Test")
SET(TARGET_DEFAULT_APPLICATION_FOLDER "Test")

ADD_SUBDIRECTORY(gwGeologicalTest)
#ADD_SUBDIRECTORY(gwGeologicalTool)
ADD_SUBDIRECTORY(gwGeologicalSimplify)
ADD_SUBDIRECTORY(gwGeologicalMapTest)
ADD_SUBDIRECTORY(gwDracoTest)
ADD_SUBDIRECTORY(gwCutterTest)
ADD_SUBDIRECTORY(gwRepairNormalTool)
ADD_SUBDIRECTORY(gwDefferedShading)
ADD_SUBDIRECTORY(gwQingXie)
ADD_SUBDIRECTORY(geo3dmlReader)
ADD_SUBDIRECTORY(SaxReader)
ADD_SUBDIRECTORY(dllTest)
ADD_SUBDIRECTORY(gwOctreeTest)
ADD_SUBDIRECTORY(gwOctreeTest2)
